[package]
name = "scanflow"
version = "0.1.0"
authors = ["Aurimas Blažulionis <0x60@pm.me>"]
edition = "2018"

[dependencies]
memflow = "0.1.3"
memflow-win32 = "0.1.3"
simplelog = "0.8.0"
iced-x86 = "1.9.1"
pelite = "0.9"
scan_fmt = "0.2.5"
pbr = { version = "1.0", optional = true }

[features]
default = ["progress_bar"]
progress_bar = ["pbr"]
